# runttare-2000

./: .env  .gitignore  README.md  docker-compose.develop.yml  docker-compose.yml  ignite.sh  init.sh
api/: .babelrc  Docker  Dockerfile  gunicorn_config.py  nodemon.json  package.json  pyproject.toml  requirements.txt  runtta.db  tsconfig.json  tslint.json
api/src/: app.ts  db.py  index.ts  main.py  messages.py  raspi.py  runtta.py  runttare.ts  server.ts  websocket.py
api/src/common/util/: db.ts
api/src/modules/Runtta/: Runtta.ts  runttaRoute.ts
api/src/modules/index/: Index.ts
api/src/modules/users/: UserCreate.ts  UserList.ts
conf/: nats.conf
nginx/: nginx.conf
node/: Dockerfile  package-lock.json  package.json  runtta.db  tsconfig.json
node/src/: db.ts  msg.ts  runttare.ts  server.ts
service/: runttare.service
ui/: Dockerfile  package-lock.json  package.json  tailwind.config.js
ui/public/: index.html
ui/src/: App.tsx  index.css  index.html  routes.ts
ui/src/components/: Footer.tsx  Header.tsx  RunttaBtn.tsx  StatusIndicator.tsx  runtta.css
ui/src/components/Home/: home.tsx  store.ts
ui/src/config/: constants.ts  http.ts
ui/src/store/: store.ts
ui/src/styles/: _global.scss  _variables.scss
ui/src/util/: resources.ts  storage.ts
ui/webpack/: webpack.base.js
worker/: Dockerfile  go.mod  go.sum
worker/cmd/: runttare.go
worker/docker/: entrypoint-dev.sh
worker/internal/: constants.go
worker/internal/config/: config.go
worker/internal/connection/: connection.go
worker/internal/db/: interface.go  sqlite.go
(+10 files in other folders)
